--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
+        "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-multitenancy": "^4.0",
         "spatie/laravel-permission": "^6.21",
