--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/pennant": "^1.18",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-medialibrary": "^11.14",
         "spatie/laravel-multitenancy": "^4.0",
         "spatie/laravel-permission": "^6.21",
         "tightenco/ziggy": "^2.4"
