--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "spatie/laravel-medialibrary": "^11.14",
         "spatie/laravel-multitenancy": "^4.0",
         "spatie/laravel-permission": "^6.21",
+        "spatie/laravel-searchable": "^1.13",
         "spatie/laravel-settings": "^3.4",
         "tightenco/ziggy": "^2.4"
     },
